Bug 141683 - EDITING: Multi range selection pasted transposed as links is not transposed
Summary: EDITING: Multi range selection pasted transposed as links is not transposed
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.0.4.2 release
Hardware: All All
: medium normal
Assignee: Roland Kurmann
URL:
Whiteboard: target:7.2.0
Keywords:
Depends on:
Blocks: Paste-Special
  Show dependency treegraph
 
Reported: 2021-04-13 18:53 UTC by Roland Kurmann
Modified: 2021-06-07 20:16 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Roland Kurmann 2021-04-13 18:53:17 UTC
Description:
When a multi range selection is pasted transposed and as link, then the pasted links are not transposed. Irrelevant whether rows or columns ranges are selected.

It works when only pasted transposed.

Steps to Reproduce:
1. Open a new spreadsheet in Calc
2. Fill the cells A1:C3 with

1	11	111
2	12	112
3	13	113

case columns:
3. Select cells A1:A3
4. Press Ctrl and select cells C1:C3, hence 2 column ranges are selected
5. Goto cell A6
6. Edit > Paste Special > Paste Special > Paste Transposed
7. Goto cell A10
8. Edit > Paste Special > Paste Special > Enable As Link, Enable Transpose and OK


case rows:
10. Select cells A1:C1
11. Press Ctrl and select A3:C3, hence 2 rows ranges are selected
12. Goto cell A14
13. Edit > Paste Special > Paste Special > Paste Transposed
14. Goto cell A19
15. Edit > Paste Special > Paste Special > Enable As Link, Enable Transpose and OK

Actual Results:
The values shown after step 6 and 8 are not the same. The links in A10:C11 are not transposed.

Step 8 shows
1	11	111
3	13	113


The values shown after step 13 and 15 are not the same. The links in A19:B21 are not transposed.

Step 15 shows
1	111
2	112
3	113


Expected Results:
The values shown after step 6 and 8 are the same. The links in A10:C11 are transposed.

Step 8 shows
1	2	3
111	112	113

The values shown after step 13 and 15 are the same. The links in A19:B21 are transposed.

Step 15 shows
1	3
11	13
111	113



Reproducible: Always


User Profile Reset: No



Additional Info:
I've found this issue while fixing and testing bug 107348 and bug 107348.

Version: 7.0.4.2
Build ID: 00(Build:2)
CPU threads: 4; OS: Linux 5.3; UI render: GL; VCL: kf5
Locale: de-CH (en_US.UTF-8); UI: de-DE
Calc: threaded


Version: 7.2.0.0.alpha0+ / LibreOffice Community
Build ID: 238034a21248ff58f36aad74a7bf3bec163ad700
CPU threads: 4; OS: Linux 5.3; UI render: default; VCL: x11
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 1 Roland Kurmann 2021-04-13 19:23:02 UTC
I've found the problem.
Comment 2 Roland Kurmann 2021-04-22 05:52:38 UTC
I've submitted a patch to gerrit: https://gerrit.libreoffice.org/c/core/+/114450

Waiting for review
Comment 3 Commit Notification 2021-04-22 13:12:42 UTC
scito committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/6491c205acb3c166d93ef6a41199d344e21d98ac

tdf#107348 tdf#45958 tdf#141215 tdf#141683 fix filtered/transpose paste

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 BogdanB 2021-05-21 17:59:42 UTC
1	11	111
2	12	112
3	13	113
		
		
1	2	3
111	112	113
		
		
0	0	0
0	0	0
		
		
1	3	
11	13	
111	113	
		
		
0	0	
0	0	
0	0	


This is the result I get with this patch. It's ok?... I am not sure...

Tested with
Version: 7.2.0.0.alpha1+ / LibreOffice Community
Build ID: b238522ca121ca8f863fe4d3394ade088a65ad01
CPU threads: 4; OS: Linux 5.8; UI render: default; VCL: gtk3
Locale: en-US (ro_RO.UTF-8); UI: en-US
Calc: threaded
Comment 5 Roland Kurmann 2021-05-28 08:46:42 UTC
(In reply to BogdanB from comment #4)

> This is the result I get with this patch. It's ok?

Nope

It seems to work if the formula checkbox is selected. It seems to be a flag problem. I'll investigate it.
Comment 6 Roland Kurmann 2021-05-28 11:59:56 UTC
I've submitted the patch https://gerrit.libreoffice.org/c/core/+/116332
Comment 7 Commit Notification 2021-06-04 10:20:02 UTC
scito committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/940dad058c199c6b6990ad313db5a17758a19c65

tdf#141683 fix missing flag in multi sel pasted transposed as links

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 BogdanB 2021-06-07 20:16:32 UTC
It's ok now.

1	11	111
2	12	112
3	13	113
		
		
1	2	3
111	112	113
		
		
1	2	3
111	112	113
		
		
1	3	
11	13	
111	113	
		
		
1	3	
11	13	
111	113	


Version: 7.2.0.0.alpha1+ / LibreOffice Community
Build ID: ec629c5ee22d02f99d66a5cf975ce239876b7f4d
CPU threads: 4; OS: Linux 5.8; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded