sc/qa/unit/ucalc_copypaste.cxx
@@ -869,7 +869,7 @@ void TestCopyPaste::testCopyPasteSpecialAsLinkFilteredTranspose()
 }
 
 // tdf#141683
-// InsertDeleteFlags::CONTENTS
+// InsertDeleteFlags::VALUE
 void TestCopyPaste::testCopyPasteSpecialMultiRangeRowAsLinkTranspose()
 {
     const SCTAB srcSheet = 0;
@@ -900,14 +900,14 @@ void TestCopyPaste::testCopyPasteSpecialMultiRangeRowAsLinkTranspose()
 
     // transpose
     ScDocumentUniquePtr pTransClip(new ScDocument(SCDOCMODE_CLIP));
-    aClipDoc.TransposeClip(pTransClip.get(), InsertDeleteFlags::CONTENTS, true, false);
+    aClipDoc.TransposeClip(pTransClip.get(), InsertDeleteFlags::VALUE, true, false);
 
     ScRange aDestRange(1, 1, destSheet, 2, 4, destSheet); // Paste to B2:C5 on Sheet2.
     ScMarkData aMark(m_pDoc->GetSheetLimits());
     aMark.SetMarkArea(aDestRange);
-    m_pDoc->CopyMultiRangeFromClip(ScAddress(1, 1, destSheet), aMark, InsertDeleteFlags::CONTENTS,
-                                   pTransClip.get(), true, false /* false fixes tdf#141683 */,
-                                   false, false);
+    m_pDoc->CopyMultiRangeFromClip(
+        ScAddress(1, 1, destSheet), aMark, InsertDeleteFlags::VALUE | InsertDeleteFlags::FORMULA,
+        pTransClip.get(), true, false /* false fixes tdf#141683 */, false, false);
     pTransClip.reset();
 
     OUString aString;
@@ -959,7 +959,7 @@ void TestCopyPaste::testCopyPasteSpecialMultiRangeRowAsLinkTranspose()
 }
 
 // tdf#141683
-// InsertDeleteFlags::CONTENTS
+// InsertDeleteFlags::VALUE
 void TestCopyPaste::testCopyPasteSpecialMultiRangeRowAsLinkFilteredTranspose()
 {
     const SCTAB srcSheet = 0;
@@ -1027,7 +1027,7 @@ void TestCopyPaste::testCopyPasteSpecialMultiRangeRowAsLinkFilteredTranspose()
     printRange(m_pDoc, aClipParam.getWholeRange(), "Src range");
     // transpose
     ScDocumentUniquePtr pTransClip(new ScDocument(SCDOCMODE_CLIP));
-    aClipDoc.TransposeClip(pTransClip.get(), InsertDeleteFlags::CONTENTS, true, false);
+    aClipDoc.TransposeClip(pTransClip.get(), InsertDeleteFlags::VALUE, true, false);
 
     printRange(&aClipDoc, ScRange(0, 0, 0, 4, 5, 0), "Base doc (&aNewClipDoc)");
     printRange(pTransClip.get(), ScRange(0, 0, 0, 3, 3, 0),
@@ -1035,9 +1035,9 @@ void TestCopyPaste::testCopyPasteSpecialMultiRangeRowAsLinkFilteredTranspose()
     ScRange aDestRange(1, 1, destSheet, 3, 4, destSheet); // Paste to B2:D5 on Sheet2.
     ScMarkData aMark(m_pDoc->GetSheetLimits());
     aMark.SetMarkArea(aDestRange);
-    m_pDoc->CopyMultiRangeFromClip(ScAddress(1, 1, destSheet), aMark, InsertDeleteFlags::CONTENTS,
-                                   pTransClip.get(), true, false /* false fixes tdf#141683 */,
-                                   false, false);
+    m_pDoc->CopyMultiRangeFromClip(
+        ScAddress(1, 1, destSheet), aMark, InsertDeleteFlags::VALUE | InsertDeleteFlags::FORMULA,
+        pTransClip.get(), true, false /* false fixes tdf#141683 */, false, false);
     pTransClip.reset();
     printRange(m_pDoc, aDestRange, "Transposed dest sheet");
 
@@ -1111,7 +1111,7 @@ void TestCopyPaste::testCopyPasteSpecialMultiRangeRowAsLinkFilteredTranspose()
 }
 
 // tdf#141683
-// InsertDeleteFlags::CONTENTS
+// InsertDeleteFlags::VALUE
 void TestCopyPaste::testCopyPasteSpecialMultiRangeColAsLinkTranspose()
 {
     const SCTAB srcSheet = 0;
@@ -1142,14 +1142,14 @@ void TestCopyPaste::testCopyPasteSpecialMultiRangeColAsLinkTranspose()
 
     // transpose
     ScDocumentUniquePtr pTransClip(new ScDocument(SCDOCMODE_CLIP));
-    aClipDoc.TransposeClip(pTransClip.get(), InsertDeleteFlags::CONTENTS, true, false);
+    aClipDoc.TransposeClip(pTransClip.get(), InsertDeleteFlags::VALUE, true, false);
 
     ScRange aDestRange(1, 1, destSheet, 4, 2, destSheet); // Paste to B2:E3 on Sheet2.
     ScMarkData aMark(m_pDoc->GetSheetLimits());
     aMark.SetMarkArea(aDestRange);
-    m_pDoc->CopyMultiRangeFromClip(ScAddress(1, 1, destSheet), aMark, InsertDeleteFlags::CONTENTS,
-                                   pTransClip.get(), true, false /* false fixes tdf#141683 */,
-                                   false, false);
+    m_pDoc->CopyMultiRangeFromClip(
+        ScAddress(1, 1, destSheet), aMark, InsertDeleteFlags::VALUE | InsertDeleteFlags::FORMULA,
+        pTransClip.get(), true, false /* false fixes tdf#141683 */, false, false);
     pTransClip.reset();
 
     OUString aString;
@@ -1201,7 +1201,7 @@ void TestCopyPaste::testCopyPasteSpecialMultiRangeColAsLinkTranspose()
 }
 
 // tdf#141683
-// InsertDeleteFlags::CONTENTS
+// InsertDeleteFlags::VALUE
 void TestCopyPaste::testCopyPasteSpecialMultiRangeColAsLinkFilteredTranspose()
 {
     const SCTAB srcSheet = 0;
@@ -1256,14 +1256,14 @@ void TestCopyPaste::testCopyPasteSpecialMultiRangeColAsLinkFilteredTranspose()
 
     // transpose
     ScDocumentUniquePtr pTransClip(new ScDocument(SCDOCMODE_CLIP));
-    aClipDoc.TransposeClip(pTransClip.get(), InsertDeleteFlags::CONTENTS, true, false);
+    aClipDoc.TransposeClip(pTransClip.get(), InsertDeleteFlags::VALUE, true, false);
 
     ScRange aDestRange(1, 1, destSheet, 4, 2, destSheet); // Paste to B2:E3 on Sheet2.
     ScMarkData aMark(m_pDoc->GetSheetLimits());
     aMark.SetMarkArea(aDestRange);
-    m_pDoc->CopyMultiRangeFromClip(ScAddress(1, 1, destSheet), aMark, InsertDeleteFlags::CONTENTS,
-                                   pTransClip.get(), true, false /* false fixes tdf#141683 */,
-                                   false, false);
+    m_pDoc->CopyMultiRangeFromClip(
+        ScAddress(1, 1, destSheet), aMark, InsertDeleteFlags::VALUE | InsertDeleteFlags::FORMULA,
+        pTransClip.get(), true, false /* false fixes tdf#141683 */, false, false);
     pTransClip.reset();
 
     OUString aString;
